make note for GIT LFS requirement for data

--- a/examples/classification/tc_mnli.ipynb
+++ b/examples/classification/tc_mnli.ipynb
@@ -198,7 +198,9 @@
     "## Read Dataset\n",
     "We start by loading a subset of the data. The MNLI dataset has been downloaded for your convenience and added as part of this repository. The data can be found in `../../sample_data/MNLI`.   \n",
     "\n",
-    "The MultiNLI dataset is mainly used for natural language inference (NLI) tasks, where the inputs are sentence pairs and the labels are entailment indicators"
+    "The MultiNLI dataset is mainly used for natural language inference (NLI) tasks, where the inputs are sentence pairs and the labels are entailment indicators.  \n",
+    "\n",
+    "> **NOTE:** The MNLI data is very large and would need [Git LFS](https://docs.github.com/en/github/managing-large-files/installing-git-large-file-storage) installed on your machine to pull it down.  \n"
    ]
   },
   {
